--- a/Keyboards/KeyboardsBase/Keyboard.xib
+++ b/Keyboards/KeyboardsBase/Keyboard.xib
@@ -49,14 +49,14 @@
                 <outlet property="formLblTR" destination="0yf-Ey-fhO" id="h5P-F4-v47"/>
                 <outlet property="formLblTop" destination="Tok-kt-bj0" id="2S6-HL-Bqk"/>
                 <outlet property="leftAutoPartition" destination="0Dt-BE-21v" id="V0x-nQ-quh"/>
-                <outlet property="padEmojiDivider1" destination="vxG-Xy-AGP" id="xsf-EZ-WXu"/>
-                <outlet property="padEmojiDivider2" destination="a5v-CW-jQ3" id="a31-MQ-24l"/>
-                <outlet property="padEmojiKey1" destination="ahf-6u-wyz" id="iip-Ke-WOy"/>
-                <outlet property="padEmojiKey2" destination="rf3-vY-iiK" id="j4Q-sf-8qN"/>
-                <outlet property="padEmojiKey3" destination="O2V-5i-PgI" id="pzi-AZ-AQo"/>
+                <outlet property="padEmojiDivider0" destination="vxG-Xy-AGP" id="TMB-d6-3x2"/>
+                <outlet property="padEmojiDivider1" destination="a5v-CW-jQ3" id="eXc-pw-atG"/>
+                <outlet property="padEmojiKey0" destination="ahf-6u-wyz" id="V4O-U0-bUO"/>
+                <outlet property="padEmojiKey1" destination="rf3-vY-iiK" id="NAu-su-j0i"/>
+                <outlet property="padEmojiKey2" destination="O2V-5i-PgI" id="Io9-tE-K60"/>
                 <outlet property="phoneEmojiDivider" destination="6DZ-gU-SO5" id="VXK-ZI-d4Q"/>
-                <outlet property="phoneEmojiKey1" destination="pTv-BK-rKh" id="tmi-Og-yPT"/>
-                <outlet property="phoneEmojiKey2" destination="KVC-Ai-vdF" id="XkK-5v-Wxj"/>
+                <outlet property="phoneEmojiKey0" destination="pTv-BK-rKh" id="U16-av-iWx"/>
+                <outlet property="phoneEmojiKey1" destination="KVC-Ai-vdF" id="iYf-s9-OKK"/>
                 <outlet property="pluralKey" destination="FgS-T1-2rI" id="NSp-W5-nas"/>
                 <outlet property="rightAutoPartition" destination="hPX-B4-WMk" id="vhl-ch-h5H"/>
                 <outlet property="scribeKey" destination="MCB-7F-dNd" id="AzX-VF-3Nj"/>
@@ -280,20 +280,20 @@
                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                     <state key="normal" title=""/>
                 </button>
-                <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="6un-y7-fLx" userLabel="StackVNum">
-                    <rect key="frame" x="3" y="38.5" width="314" height="38.5"/>
-                </stackView>
-                <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="xYB-wV-ziM" userLabel="StackV0">
-                    <rect key="frame" x="3" y="75" width="314" height="46"/>
-                </stackView>
-                <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="OeW-Ji-4P7" userLabel="StackV1">
-                    <rect key="frame" x="3" y="119" width="314" height="45.5"/>
+                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Y6B-bi-XMS" userLabel="StackV3">
+                    <rect key="frame" x="3" y="209.5" width="314" height="45.5"/>
                 </stackView>
                 <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="lVo-8I-Rya" userLabel="StackV2">
                     <rect key="frame" x="3" y="164.5" width="314" height="46"/>
                 </stackView>
-                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Y6B-bi-XMS" userLabel="StackV3">
-                    <rect key="frame" x="3" y="209.5" width="314" height="45.5"/>
+                <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="OeW-Ji-4P7" userLabel="StackV1">
+                    <rect key="frame" x="3" y="119" width="314" height="45.5"/>
+                </stackView>
+                <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="xYB-wV-ziM" userLabel="StackV0">
+                    <rect key="frame" x="3" y="75" width="314" height="46"/>
+                </stackView>
+                <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="6un-y7-fLx" userLabel="StackVNum">
+                    <rect key="frame" x="3" y="38.5" width="314" height="38.5"/>
                 </stackView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RVF-jy-JTf" userLabel="CommandBack">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="38.5"/>
@@ -339,7 +339,7 @@
                     <nil key="highlightedColor"/>
                     <size key="shadowOffset" width="0.0" height="1"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a5v-CW-jQ3" userLabel="PadEmojiDivider2">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a5v-CW-jQ3" userLabel="PadEmojiDivider1">
                     <rect key="frame" x="291" y="7" width="1" height="24.5"/>
                     <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
@@ -350,7 +350,7 @@
                     <nil key="highlightedColor"/>
                     <size key="shadowOffset" width="0.0" height="1"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vxG-Xy-AGP" userLabel="PadEmojiDivider1">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vxG-Xy-AGP" userLabel="PadEmojiDivider0">
                     <rect key="frame" x="262" y="7" width="1" height="24.5"/>
                     <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
@@ -361,17 +361,17 @@
                     <nil key="highlightedColor"/>
                     <size key="shadowOffset" width="0.0" height="1"/>
                 </label>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O2V-5i-PgI" userLabel="PadEmoji3">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O2V-5i-PgI" userLabel="PadEmoji2">
                     <rect key="frame" x="295" y="4" width="22" height="30.5"/>
                     <color key="backgroundColor" systemColor="systemPurpleColor"/>
                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rf3-vY-iiK" userLabel="PadEmoji2">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rf3-vY-iiK" userLabel="PadEmoji1">
                     <rect key="frame" x="266" y="4" width="22" height="30.5"/>
                     <color key="backgroundColor" systemColor="systemPurpleColor"/>
                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ahf-6u-wyz" userLabel="PadEmoji1">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ahf-6u-wyz" userLabel="PadEmoji0">
                     <rect key="frame" x="237" y="4" width="22" height="30.5"/>
                     <color key="backgroundColor" systemColor="systemPurpleColor"/>
                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
@@ -387,12 +387,12 @@
                     <nil key="highlightedColor"/>
                     <size key="shadowOffset" width="0.0" height="1"/>
                 </label>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KVC-Ai-vdF" userLabel="PhoneEmoji2">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KVC-Ai-vdF" userLabel="PhoneEmoji1">
                     <rect key="frame" x="280.5" y="4" width="36.5" height="30.5"/>
                     <color key="backgroundColor" systemColor="systemPurpleColor"/>
                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pTv-BK-rKh" userLabel="PhoneEmoji1">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pTv-BK-rKh" userLabel="PhoneEmoji0">
                     <rect key="frame" x="237" y="4" width="36.5" height="30.5"/>
                     <color key="backgroundColor" systemColor="systemPurpleColor"/>
                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
