--- a/Scribe/Base.lproj/AppScreen.storyboard
+++ b/Scribe/Base.lproj/AppScreen.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="z4h-ME-igh">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22155" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="z4h-ME-igh">
     <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22131"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -268,7 +268,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RRR-Nu-rPx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="25" y="-100"/>
+            <point key="canvasLocation" x="-28" y="-100"/>
         </scene>
         <!--Swipeable Tab Bar Controller-->
         <scene sceneID="sLs-HO-3by">
@@ -281,16 +281,16 @@
                         <color key="selectedImageTintColor" name="linkBlue"/>
                     </tabBar>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="YCU-Xu-zWn"/>
-                        <segue destination="Ffy-3M-wWx" kind="relationship" relationship="viewControllers" id="65S-F4-qdB"/>
-                        <segue destination="1wV-q3-U0F" kind="relationship" relationship="viewControllers" id="SyS-sS-udg"/>
+                        <segue destination="BdJ-Tg-oUo" kind="relationship" relationship="viewControllers" id="SY2-da-I5k"/>
+                        <segue destination="Ffy-3M-wWx" kind="relationship" relationship="viewControllers" id="cxC-Hu-2hV"/>
+                        <segue destination="1wV-q3-U0F" kind="relationship" relationship="viewControllers" id="HDU-bV-iQ6"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4OQ-Zu-ZYy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-2766" y="-100"/>
         </scene>
-        <!--Installation-->
+        <!--InstallationVC-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="InstallationVC" customModule="Scribe" customModuleProvider="target" sceneMemberID="viewController">
@@ -299,21 +299,21 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eyk-EK-raM" userLabel="TopSpace">
-                                <rect key="frame" x="0.0" y="50" width="375" height="34"/>
+                                <rect key="frame" x="0.0" y="146" width="375" height="29"/>
                                 <color key="backgroundColor" systemColor="systemBrownColor"/>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xOG-9z-mVQ" userLabel="LogoSpace">
-                                <rect key="frame" x="0.0" y="185.66666666666666" width="375" height="34"/>
+                                <rect key="frame" x="0.0" y="262.66666666666669" width="375" height="29"/>
                                 <color key="backgroundColor" systemColor="systemBrownColor"/>
                             </view>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ScribeLogo" translatesAutoresizingMaskIntoConstraints="NO" id="Oxz-Zq-2g7">
-                                <rect key="frame" x="81.333333333333329" y="84" width="212.33333333333337" height="101.66666666666669"/>
+                                <rect key="frame" x="96.333333333333329" y="175" width="182.33333333333337" height="87.666666666666686"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="Oxz-Zq-2g7" secondAttribute="height" multiplier="981:471" id="fLZ-Jn-Qjj"/>
                                 </constraints>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Z6Q-k0-ggs" userLabel="AppTextBkrd">
-                                <rect key="frame" x="15" y="219.66666666666666" width="345" height="263.33333333333337"/>
+                                <rect key="frame" x="15" y="291.66666666666674" width="345" height="263.33333333333326"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cWe-iO-9F6" userLabel="SettingsBtn">
                                         <rect key="frame" x="0.0" y="0.0" width="345" height="263.33333333333331"/>
@@ -369,42 +369,55 @@
                                     <constraint firstItem="cWe-iO-9F6" firstAttribute="top" secondItem="Z6Q-k0-ggs" secondAttribute="top" id="ygR-ZR-coW"/>
                                 </constraints>
                             </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="dGO-Uo-6Xt">
+                                <rect key="frame" x="0.0" y="563" width="375" height="125"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="125" id="6wU-Qa-FYU"/>
+                                </constraints>
+                            </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" name="scribeAppBackground"/>
                         <constraints>
                             <constraint firstItem="eyk-EK-raM" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="2Ph-fn-dx0"/>
                             <constraint firstItem="eyk-EK-raM" firstAttribute="width" secondItem="6Tk-OE-BBY" secondAttribute="width" id="8SI-nP-cSR"/>
+                            <constraint firstItem="dGO-Uo-6Xt" firstAttribute="leading" secondItem="xOG-9z-mVQ" secondAttribute="leading" id="AeZ-gg-jrI"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="dGO-Uo-6Xt" secondAttribute="bottom" constant="41" id="Eul-8L-GT9"/>
                             <constraint firstItem="xOG-9z-mVQ" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="fhd-JE-4TH"/>
                             <constraint firstItem="Z6Q-k0-ggs" firstAttribute="top" secondItem="xOG-9z-mVQ" secondAttribute="bottom" id="fme-On-ZPU"/>
                             <constraint firstItem="Oxz-Zq-2g7" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="hCU-MF-j2K"/>
                             <constraint firstItem="xOG-9z-mVQ" firstAttribute="width" secondItem="6Tk-OE-BBY" secondAttribute="width" id="iW6-ER-Dkj"/>
                             <constraint firstItem="xOG-9z-mVQ" firstAttribute="top" secondItem="Oxz-Zq-2g7" secondAttribute="bottom" id="iyg-X4-Ffs"/>
+                            <constraint firstItem="dGO-Uo-6Xt" firstAttribute="trailing" secondItem="xOG-9z-mVQ" secondAttribute="trailing" id="kEf-GE-K8r"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Z6Q-k0-ggs" secondAttribute="trailing" constant="15" id="l2i-W0-zLN"/>
                             <constraint firstItem="eyk-EK-raM" firstAttribute="height" secondItem="6Tk-OE-BBY" secondAttribute="height" multiplier="0.05" id="mHz-xI-0TG"/>
                             <constraint firstItem="Z6Q-k0-ggs" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="15" id="p8Q-Ru-mRC"/>
                             <constraint firstItem="eyk-EK-raM" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="uVZ-du-Fub"/>
+                            <constraint firstItem="dGO-Uo-6Xt" firstAttribute="top" secondItem="Z6Q-k0-ggs" secondAttribute="bottom" constant="8" id="udL-er-TFL"/>
                             <constraint firstItem="Oxz-Zq-2g7" firstAttribute="top" secondItem="eyk-EK-raM" secondAttribute="bottom" id="vNz-Be-acs"/>
                             <constraint firstItem="xOG-9z-mVQ" firstAttribute="height" secondItem="6Tk-OE-BBY" secondAttribute="height" multiplier="0.05" id="xhQ-Iw-ZFa"/>
                             <constraint firstItem="Oxz-Zq-2g7" firstAttribute="height" secondItem="6Tk-OE-BBY" secondAttribute="height" multiplier="0.15" id="yJI-k4-sar"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Installation" image="keyboard" catalog="system" id="HNz-5D-1T0"/>
+                    <navigationItem key="navigationItem" id="uYG-GV-LhD"/>
                     <connections>
                         <outlet property="appTextBackground" destination="Z6Q-k0-ggs" id="jA7-Mx-8RA"/>
                         <outlet property="appTextView" destination="ZcW-Aa-aDz" id="JWT-TA-s9A"/>
                         <outlet property="logoSpace" destination="xOG-9z-mVQ" id="dmA-CN-T1P"/>
+                        <outlet property="outerTable" destination="dGO-Uo-6Xt" id="kI2-DO-Dwo"/>
                         <outlet property="settingCornerWidthConstraint" destination="7N0-2Z-4lJ" id="lgA-xw-4mX"/>
                         <outlet property="settingsBtn" destination="cWe-iO-9F6" id="TR7-qB-ZDN"/>
                         <outlet property="settingsCorner" destination="7N0-2Z-4lJ" id="C3e-Tn-B6p"/>
                         <outlet property="topIconPad" destination="21V-cO-tk0" id="mlN-Za-vGo"/>
                         <outlet property="topIconPhone" destination="xnq-D3-6Lg" id="5mC-Zt-3z7"/>
                         <outlet property="topSpace" destination="eyk-EK-raM" id="Xqt-JJ-RLp"/>
+                        <segue destination="JEg-VP-tCs" kind="show" id="Rxm-aE-2UR"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1831.2" y="-836.45320197044339"/>
+            <point key="canvasLocation" x="-829.60000000000002" y="-808.37438423645324"/>
         </scene>
         <!--About-->
         <scene sceneID="6lj-MX-SxG">
@@ -448,6 +461,73 @@
             </objects>
             <point key="canvasLocation" x="-1831.2" y="-100.49261083743843"/>
         </scene>
+        <!--Installation-->
+        <scene sceneID="v8R-xu-urf">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="BdJ-Tg-oUo" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Installation" image="keyboard" catalog="system" id="HNz-5D-1T0"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="aNa-eJ-xMK">
+                        <rect key="frame" x="0.0" y="50" width="375" height="96"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="KN6-ge-0Mj"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aMw-QO-ebb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1772" y="-808.37438423645324"/>
+        </scene>
+        <!--Download DataVC-->
+        <scene sceneID="JwU-9R-yYW">
+            <objects>
+                <viewController storyboardIdentifier="DownloadDataVC" id="JEg-VP-tCs" customClass="DownloadDataVC" customModule="Scribe" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="cjj-dK-pU9">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="vRa-Ve-ZCX">
+                                <rect key="frame" x="0.0" y="154" width="375" height="575"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="nMh-mo-try"/>
+                        <color key="backgroundColor" name="scribeAppBackground"/>
+                        <constraints>
+                            <constraint firstItem="nMh-mo-try" firstAttribute="trailing" secondItem="vRa-Ve-ZCX" secondAttribute="trailing" id="SyC-zV-MFz"/>
+                            <constraint firstItem="vRa-Ve-ZCX" firstAttribute="top" secondItem="nMh-mo-try" secondAttribute="top" constant="8" id="TpB-3J-2OZ"/>
+                            <constraint firstItem="vRa-Ve-ZCX" firstAttribute="leading" secondItem="nMh-mo-try" secondAttribute="leading" id="dxG-6o-cw8"/>
+                            <constraint firstItem="nMh-mo-try" firstAttribute="bottom" secondItem="vRa-Ve-ZCX" secondAttribute="bottom" id="jMm-7R-fTq"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="2VQ-6k-UTl"/>
+                    <connections>
+                        <outlet property="outerTable" destination="vRa-Ve-ZCX" id="Xfh-Tv-7Yw"/>
+                        <segue destination="RGh-BY-pAH" kind="show" id="oKV-Z8-MUl"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dgV-Sf-L41" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-28" y="-808"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="9Jx-mh-9Ym">
+            <objects>
+                <viewController storyboardIdentifier="CheckdDataVC" id="RGh-BY-pAH" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="GFv-7B-5Wd">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="lPM-uo-2kG"/>
+                        <color key="backgroundColor" name="scribeAppBackground"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="gny-sO-uVQ"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ddf-fT-QOu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="732" y="-808"/>
+        </scene>
     </scenes>
     <color key="tintColor" name="scribeAppBackground"/>
     <resources>
@@ -472,13 +552,13 @@
             <color red="0.99215686274509807" green="0.67843137254901964" blue="0.050980392156862744" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="labelColor">
-            <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemBrownColor">
-            <color red="0.63529411764705879" green="0.51764705882352946" blue="0.36862745098039218" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.63529411759999999" green="0.51764705879999995" blue="0.36862745099999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
